--- a/SklepUKW/SklepUKW/Views/Films/Details.cshtml
+++ b/SklepUKW/SklepUKW/Views/Films/Details.cshtml
@@ -4,6 +4,9 @@
     ViewBag.Title = "Szczegóły filmu";
 }
 
+<h3>
+    @Html.MvcSiteMap().SiteMapPath()
+</h3>
 <div id="szczegoly">
     <table id="tableSzczegoly">
         <tr>
