--- a/SklepUKW/SklepUKW/Views/Films/List.cshtml
+++ b/SklepUKW/SklepUKW/Views/Films/List.cshtml
@@ -16,9 +16,9 @@
 </table>
 
 <h2>@Model.Category.Name - @Model.Category.Desc</h2>
-
-
-
+<h3>
+    @Html.MvcSiteMap().SiteMapPath()
+</h3>
 <table border=1px>
     @foreach (var film in Model.FilmsFromCategory)
     {
