--- a/SklepUKW/SklepUKW/Views/Shared/_Layout.cshtml
+++ b/SklepUKW/SklepUKW/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 <body>
     <header>
         
-        @Html.Action("CategoriesMenu", "Films");
+        @Html.Action("CategoriesMenu", "Films")
     </header>
 
     <div>
