--- a/SklepUKW/SklepUKW/Content/Site.css
+++ b/SklepUKW/SklepUKW/Content/Site.css
@@ -86,3 +86,33 @@ h2 {
 .disabled {
     pointer-events: none;
 }
+
+.SekcjaPrzyciski {
+    overflow: hidden;
+    font-size: 40px;
+}
+
+    .SekcjaPrzyciski :nth-child(1) {
+        float: left;
+    }
+
+    .SekcjaPrzyciski :nth-child(2) {
+        float: right;
+    }
+
+#CenaCalkowita {
+    width: 100%;
+    text-align: right;
+    margin-top: 25px;
+    margin-bottom: 60px;
+    font-size: 35px;
+}
+
+#koszykTabela {
+    border-collapse: collapse;
+    font-size: 30px;
+}
+
+    #koszykTabela tr {
+        border-bottom: 1px solid #DADADA;
+    }
